<resources>
    <string name="app_name">MC_Assig_02 | Calculator MMA</string>
    <string name="questionP1">Question</string> <string name="questionP2">Q2</string> <string name="answaer"></string>

    <string name="clear">C</string>
    <string name="delete">DEL</string>
    <string name="modulus">%</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="seven">7</string> <string name="eight">8</string> <string name="nine">9</string>
    <string name="four">4</string> <string name="five">5</string> <string name="six">6</string>
    <string name="one">1</string> <string name="two">2</string> <string name="three">3</string>
    <string name="exit">X</string> <string name="zero">0</string> <string name="dot">.</string>
</resources>