<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionP1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionP1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218" />

    <TableLayout
        android:layout_width="384dp"
        android:layout_height="320dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.715">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/clear"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_red_dark"
                android:text="@string/delete"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="57dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_purple"
                android:text="@string/modulus"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="21dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_purple"
                android:text="@string/divide"
                android:textColor="@android:color/white"
                android:textSize="18dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:paddingTop="10dp">

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_green_dark"
                android:text="@string/seven"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_green_dark"
                android:text="@string/eight"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_green_dark"
                android:text="@string/nine"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="17dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_purple"
                android:text="@string/multiply"
                android:textColor="@android:color/white"
                android:textSize="18dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_green_dark"
                android:text="@string/four"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_green_dark"
                android:text="@string/five"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_green_dark"
                android:text="@string/six"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <Button
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_purple"
                android:text="@string/minus"
                android:textColor="@android:color/white"
                android:textSize="18dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_green_dark"
                android:text="@string/one"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <Button
                android:id="@+id/button14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_green_dark"
                android:text="@string/two"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <Button
                android:id="@+id/button15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_green_dark"
                android:text="@string/three"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <Button
                android:id="@+id/button16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_purple"
                android:text="@string/plus"
                android:textColor="@android:color/white"
                android:textSize="18dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray"
                android:text="@string/exit"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <Button
                android:id="@+id/button18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_green_dark"
                android:text="@string/zero"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <Button
                android:id="@+id/button19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_green_dark"
                android:text="@string/dot"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <Button
                android:id="@+id/button20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_purple"
                android:text="@string/equal"
                android:textColor="@android:color/white"
                android:textSize="18dp" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>